fix(style): ensure panel heading heights are consistent
The collapsible panel headings and the app heading are now consistently
the same height at `38px` as before they were variable in height based
on the vertical screen resolution and did not line up.

--- a/styles/main.less
+++ b/styles/main.less
@@ -24,6 +24,10 @@ html, body, .main-container {
   .flex(3);
 }
 
+.panel-heading {
+  min-height: 38px;
+}
+
 .vertical-panels-container {
   .flex-display;
   .flex-direction(column);
@@ -80,7 +84,7 @@ html, body, .main-container {
   width: @app-width;
   border: 0;
   max-height: 100%;
-
+  border-top: 1px solid #ddd;
 }
 
 .signed-request-app {
@@ -91,6 +95,9 @@ html, body, .main-container {
 
 .app-panel-container {
   position: relative;
+  .panel-heading {
+    border: none;
+  }
 }
 
 .app-blocker {
